# WeVibeMLops

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  data.dvc  index.html  labels_metrics_sampled.csv  models.dvc  nohup.out  predictions_log.csv  pyproject.toml  requirements.txt  requirements_dev.txt  run_all.sh  tasks.py  train_all.sh
.dvc/: config
.github/workflows/: deploy_docs.yaml  dvc_update.yaml  model_speed.yaml  tests.yaml  tests_data.yaml
about/: index.html
config/: cnn_best_params.json  dino._best_paramsjson
configs/: config.yaml  sweep.yaml
dockerfiles/: api.dockerfile  build.dockerfile  cloudbuild.yaml  drift.dockerfile  frontend.dockerfile  run_all.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: about.md  index.md  installation.md  my_api.md  usage.md  viewer.md
installation/: index.html
outputs/2025-01-16/18-46-03/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-16/18-49-37/.hydra/: hydra.yaml
outputs/2025-01-16/18-53-29/.hydra/: hydra.yaml
outputs/2025-01-16/18-54-31/.hydra/: hydra.yaml
reports/: README.md  report.py
scripts/: entrypoint.sh
search/: search_index.json
src/dog_breed_classifier/: api.py  bento_service.py  data.py  data_aug.py  data_drift.py  frontend.py  model.py  model_cnn.py  model_dino.py  train.py  train_cnn.py  train_dino.py  train_resnet.py  train_resnet_sweep.py
tests/: __init__.py  test_api.py  test_data.py  test_model.py  test_train.py
tests/performancetests/: locustfile.py  test_model.py
usage/: index.html
viewer/: index.html
(+4 files in other folders)
