[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dog_breed_classifier"
version = "0.0.1"
description = "Classifying Dog Breeds from pictures"
authors = [
  { name = "Group 45", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["tests/*"]

[run]
omit = 
    config.py
    config-3.py
